deploy/monitoring/monitoring-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.lab.local
    - prometheus.lab.local
    - alertmanager.lab.local
    secretName: monitoring-tls
  rules:
  - host: grafana.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kps-grafana
            port:
              number: 80
  - host: prometheus.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kps-kube-prometheus-stack-prometheus
            port:
              number: 9090
  - host: alertmanager.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kps-kube-prometheus-stack-alertmanager
            port:
              number: 9093
